17 January 2008: Wouter
	- fixup configure in case -lldns is installed.
	- fixup a couple of doxygen warnings, about enum variables.
	- interface-automatic now copies the interface address from the
	  PKT_INFO structure as well.

16 January 2008: Wouter
	- incoming queries to the server with TC bit on are replied FORMERR.
	- interface-automatic replied the wrong source address on localhost
	  queries. Seems to be due to ifnum=0 in recvmsg PKTINFO. Trying
	  to use ifnum=-1 to mean 'no interface, use kernel route'.

15 January 2008: Wouter
	- interface-automatic feature. experimental. Nice for anycast.
	- tpkg test for ip6 ancillary data.
	- removed debug prints.
	- porting experience, define for Solaris, test refined for BSD
	  compatibility. The feature probably will not work on OpenBSD.
	- makedist fixup for ldns-src in build-dir.

14 January 2008: Wouter
	- in no debug sets NDEBUG to remove asserts.
	- configure --enable-debug is needed for dependency generation
	  for assertions and for compiler warnings.
	- ldns.tgz updated with ldns-trunk (where buffer.h is updated).
	- fix lint, unit test in optimize mode.
	- default access control allows ::ffff:127.0.0.1 v6mapped localhost.
	
11 January 2008: Wouter
	- man page, warning removed.
	- added text describing the use of stub zones for private zones.
	- checkconf tests for bad hostnames (IP address), and for doubled
	  interface lines.
	- memory sizes can be given with 'k', 'Kb', or M or G appended.

10 January 2008: Wouter
	- typo in example.conf.
	- made using ldns-src that is included the package more portable
	  by linking with .lo instead of .o files in the ldns package.
	- nicer do-ip6: yes/no documentation.
	- nicer linking of libevent .o files.
	- man pages render correctly on solaris.

9 January 2008: Wouter
	- fixup openssl RAND problem, when the system is not configured to
	  give entropy, and the rng needs to be seeded.

8 January 2008: Wouter
	- print median and quartiles with extensive logging.
